Localize component params. Share translation IDs. Format numbers based on locale.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,3 +23,7 @@
     <button type="button" (click)="incrementItemCount()" i18n="@@itemCountClear">Increment</button>
     <button type="button" (click)="clearItemCount()" i18n="@@itemCountIncrement">Clear</button>
 </p>
+
+<hr>
+
+<app-form title="This is a form" i18n-title="@@formTitle"></app-form>
